--- a/requirements.txt
+++ b/requirements.txt
@@ -8,19 +8,29 @@ dnspython==2.5.0
 exceptiongroup==1.2.0
 fastapi==0.109.2
 h11==0.14.0
+httpcore==1.0.3
+httpx==0.26.0
 idna==3.6
 importlib-metadata==7.0.1
+iniconfig==2.0.0
+jose==1.0.0
 motor==3.3.2
 packaging==23.2
+passlib==1.7.4
+pluggy==1.4.0
 pydantic==2.6.1
 pydantic-core==2.16.2
+pydantic-settings==2.2.0
 PyJWT==2.8.0
 pymongo==4.6.1
+pytest==8.0.1
 python-arango==7.9.1
+python-dotenv==1.0.1
 requests==2.31.0
 requests-toolbelt==1.0.0
 sniffio==1.3.0
 starlette==0.36.3
+tomli==2.0.1
 typing-extensions==4.9.0
 urllib3==2.2.0
 uvicorn==0.27.1
