--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.5
 deta==1.2.0
 dnspython==2.5.0
+ecdsa==0.18.0
 exceptiongroup==1.2.0
 fastapi==0.109.2
+fastapi-limiter==0.1.5
 h11==0.14.0
 httpcore==1.0.3
 httpx==0.26.0
@@ -15,19 +20,27 @@ importlib-metadata==7.0.1
 iniconfig==2.0.0
 jose==1.0.0
 motor==3.3.2
+nest-asyncio==1.6.0
 packaging==23.2
 passlib==1.7.4
 pluggy==1.4.0
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.6.1
 pydantic-core==2.16.2
 pydantic-settings==2.2.0
 PyJWT==2.8.0
 pymongo==4.6.1
 pytest==8.0.1
+pytest-asyncio==0.23.5
 python-arango==7.9.1
 python-dotenv==1.0.1
+python-jose==3.3.0
+redis==4.6.0
 requests==2.31.0
 requests-toolbelt==1.0.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.36.3
 tomli==2.0.1
