--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,33 @@
 annotated-types==0.6.0
-anyio==4.2.0
-async-timeout==4.0.3
-certifi==2024.2.2
+anyio==4.3.0
+bcrypt==4.1.2
 cffi==1.16.0
-charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.5
-deta==1.2.0
-dnspython==2.5.0
+dnspython==2.6.1
 ecdsa==0.18.0
 exceptiongroup==1.2.0
-fastapi==0.109.2
-fastapi-limiter==0.1.5
+fastapi==0.110.0
 h11==0.14.0
-httpcore==1.0.3
-httpx==0.26.0
+httptools==0.6.1
 idna==3.6
-importlib-metadata==7.0.1
-iniconfig==2.0.0
-jose==1.0.0
 motor==3.3.2
-nest-asyncio==1.6.0
-packaging==23.2
 passlib==1.7.4
-pluggy==1.4.0
 pyasn1==0.5.1
 pycparser==2.21
-pydantic==2.6.1
-pydantic-core==2.16.2
-pydantic-settings==2.2.0
-PyJWT==2.8.0
-pymongo==4.6.1
-pytest==8.0.1
-pytest-asyncio==0.23.5
-python-arango==7.9.1
+pydantic==2.6.3
+pydantic-settings==2.2.1
+pydantic_core==2.16.3
+pymongo==4.6.2
 python-dotenv==1.0.1
 python-jose==3.3.0
-redis==4.6.0
-requests==2.31.0
-requests-toolbelt==1.0.0
+PyYAML==6.0.1
 rsa==4.9
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 starlette==0.36.3
-tomli==2.0.1
-typing-extensions==4.9.0
-urllib3==2.2.0
+typing_extensions==4.10.0
 uvicorn==0.27.1
-zipp==3.17.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
